--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ code {
 }
 
 .calculator-comp {
-  border: 1px solid white;
+  /* border: 1px solid white; */
   width: 50%;
   min-width: 400px;
   display: flex;
